[gd_scene load_steps=16 format=3 uid="uid://bx7tf84337nt8"]

[ext_resource type="Texture2D" uid="uid://bx63pthubf2bh" path="res://assets/sprites/Frame 8.png" id="1_id1qs"]
[ext_resource type="Script" uid="uid://djv3u76vhcwgb" path="res://assets/scripts/credits_screen.gd" id="1_mlpme"]
[ext_resource type="Texture2D" uid="uid://dfukgb0trlc4u" path="res://assets/sprites/specter logo.png" id="2_440yq"]
[ext_resource type="Texture2D" uid="uid://cfki2so134vg5" path="res://assets/sprites/skull 1.png" id="3_i0ekl"]
[ext_resource type="FontFile" uid="uid://cddtgeh3yd7k8" path="res://assets/fonts/ari-w9500-display.ttf" id="4_mlpme"]
[ext_resource type="Texture2D" uid="uid://b4vq7kiooiu" path="res://assets/sprites/name1.png" id="5_00c73"]
[ext_resource type="Texture2D" uid="uid://b43lc8n7snhke" path="res://assets/sprites/name2.png" id="6_rnh05"]
[ext_resource type="Texture2D" uid="uid://bs820ehmyku04" path="res://assets/sprites/name3.png" id="7_3ltxp"]
[ext_resource type="Texture2D" uid="uid://cnx20a5jqww3q" path="res://assets/sprites/name4.png" id="8_tiddg"]
[ext_resource type="Texture2D" uid="uid://bc8bukv4h2ay3" path="res://assets/sprites/name5.png" id="9_jkqyj"]
[ext_resource type="Texture2D" uid="uid://bs05c4qle5135" path="res://assets/sprites/name6.png" id="10_1u8mg"]
[ext_resource type="AudioStream" uid="uid://r31ktj342hwg" path="res://assets/audio/digital-click-357350.mp3" id="12_00c73"]

[sub_resource type="Animation" id="Animation_wgjmv"]
resource_name = "fade_in"
length = 2.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skull:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AGame:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Yessa:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.75, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AGame4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Name1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.25, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Name3:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.25, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Name4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.25, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Name5:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.25, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AGame2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.5, 1.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("AGame3:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.75, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Name2:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(2, 2.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i41xl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skull:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AGame:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Yessa:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AGame4:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Name1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Name3:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Name4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Name5:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("AGame2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("AGame3:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Name2:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_at4vg"]
_data = {
&"RESET": SubResource("Animation_i41xl"),
&"fade_in": SubResource("Animation_wgjmv")
}

[node name="CreditsScreen" type="Node2D"]
script = ExtResource("1_mlpme")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("1_id1qs")

[node name="Logo" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(571.9999, 109.999985)
scale = Vector2(0.49052134, 0.49052134)
texture = ExtResource("2_440yq")

[node name="Skull" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(582, 107)
scale = Vector2(0.45199156, 0.45199153)
texture = ExtResource("3_i0ekl")

[node name="AGame" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 424.0
offset_top = 193.0
offset_right = 726.0
offset_bottom = 232.0
theme_override_colors/font_shadow_color = Color(0.09803922, 0.09411765, 0.15294118, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_mlpme")
theme_override_font_sizes/font_size = 22
text = "A game made with <3 by"

[node name="Yessa" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(585, 260)
scale = Vector2(2.8636363, 2.8636363)
texture = ExtResource("5_00c73")

[node name="AGame2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 319.0
offset_top = 489.0
offset_right = 825.0
offset_bottom = 528.0
theme_override_colors/font_shadow_color = Color(0.09803922, 0.09411765, 0.15294118, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_mlpme")
theme_override_font_sizes/font_size = 22
text = "This game is open sourced! Check it out"

[node name="AGame3" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 387.0
offset_top = 524.0
offset_right = 893.0
offset_bottom = 563.0
scale = Vector2(0.76495916, 0.76495916)
theme_override_colors/font_shadow_color = Color(0.09803922, 0.09411765, 0.15294118, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_mlpme")
theme_override_font_sizes/font_size = 22
text = "https://github.com/ayessaaa/specter"

[node name="AGame4" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 423.99997
offset_top = 332.0
offset_right = 838.0
offset_bottom = 357.0
scale = Vector2(0.733796, 0.733796)
theme_override_colors/font_color = Color(0.3529412, 0.4117647, 0.53333336, 1)
theme_override_colors/font_shadow_color = Color(0.09803922, 0.09411765, 0.15294118, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_mlpme")
theme_override_font_sizes/font_size = 22
text = "special thanks to these people :)"

[node name="Name1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(258, 403)
rotation = -0.0960179
scale = Vector2(2.8630838, 2.8630838)
texture = ExtResource("6_rnh05")

[node name="Name2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(177.99997, 118)
scale = Vector2(2.8630838, 2.8630838)
texture = ExtResource("7_3ltxp")

[node name="Name3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(470.00012, 410)
scale = Vector2(2.5315418, 2.5315418)
texture = ExtResource("8_tiddg")

[node name="Name4" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(679, 396.9999)
rotation = -0.08499096
scale = Vector2(2.5315418, 2.5315418)
texture = ExtResource("9_jkqyj")

[node name="Name5" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(887, 421.00003)
rotation = 0.04724163
scale = Vector2(2.5315418, 2.5315418)
texture = ExtResource("10_1u8mg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_at4vg")
}
autoplay = "fade_in"

[node name="Done" type="Label" parent="."]
offset_left = 319.0
offset_top = 580.0
offset_right = 825.0
offset_bottom = 602.0
theme_override_colors/font_shadow_color = Color(0.09803922, 0.09411765, 0.15294118, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_mlpme")
theme_override_font_sizes/font_size = 22
text = "DONE"
horizontal_alignment = 1

[node name="DoneButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 532.0
offset_top = 576.0
offset_right = 615.0
offset_bottom = 602.0
mouse_default_cursor_shape = 2

[node name="HoverSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_00c73")
bus = &"SFX"

[connection signal="mouse_entered" from="DoneButton" to="." method="_on_done_button_mouse_entered"]
[connection signal="mouse_exited" from="DoneButton" to="." method="_on_done_button_mouse_exited"]
[connection signal="pressed" from="DoneButton" to="." method="_on_done_button_pressed"]
